--- a/.aigne/web-smith/pages/workspace/zh/home.yaml
+++ b/.aigne/web-smith/pages/workspace/zh/home.yaml
@@ -1,129 +1,117 @@
-"meta":
-  "title": "AIGNE DocSmith | 能够理解你代码的 AI 驱动文档"
-  "description": "了解 AIGNE DocSmith，这是一款革命性的 AI 工具，能够
-    直接从你的代码库自动生成全面的多语言文档。零配置，始终保持最新。"
-"sections":
-  - "sectionName": "VerticalHeroWithCode"
-    "sectionSummary": "一个引人入胜的首屏区块，通过有力的标题和一条命令的代码
-      示例，立即吸引开发者注意并促使他们开始使用。"
-    "verticalHeroTitle": "真正理解你代码的 AI 驱动文档"
-    "verticalHeroDescription": "无需再手动编写文档。AIGNE DocSmith 会分析
-      你的代码库，生成全面的多语言文档，并始终保持同步。为文档提供强大的自动化支持。"
-    "verticalHeroCode":
-      "name": "bash"
-      "content": "# One command to generate your first docs
-
-        aigne doc generate"
-  - "sectionName": "KeyBenefitsGrid"
-    "sectionSummary": "该部分通过可快速浏览的三列网格，快速传达 DocSmith 的核心
-      价值主张，突出关键优势以建立信任和兴趣。"
-    "threeColumnGridTitle": "为什么 DocSmith 值得立即采用"
-    "list":
-      - "sectionName": "BenefitCardIntelligentAnalysis"
-        "sectionSummary": "突出 AI 对代码的深度理解能力。"
-        "iconName": "mdi:head-cog-outline"
-        "cardTitle": "智能分析"
-        "cardDescription": "我们的 AI 不仅能读取你的代码，还能理解代码的
-          结构、模式与意图，从而生成真正有洞见的
-          文档。"
-      - "sectionName": "BenefitCardComprehensiveCoverage"
-        "sectionSummary": "展示所生成文档的广度。"
-        "iconName": "mdi:book-open-page-variant-outline"
-        "cardTitle": "全面覆盖"
-        "cardDescription": "从 API 参考到完整的用户指南，一次性获得你所需的
-          全部文档。不再有缺失或不完整的
-          章节。"
-      - "sectionName": "BenefitCardGlobalReady"
-        "sectionSummary": "强调强大的多语言支持。"
-        "iconName": "mdi:web"
-        "cardTitle": "全球就绪"
-        "cardDescription": "面向全球受众。提供 12 种语言的专业、具备上下文感知的
-          翻译，确保各地的技术准确性。"
-      - "sectionName": "BenefitCardAlwaysCurrent"
-        "sectionSummary": "聚焦自动更新能力，解决关键痛点。"
-        "iconName": "mdi:update"
-        "cardTitle": "始终最新"
-        "cardDescription": "无需手动更新。DocSmith 会自动检测代码
-          变更并重新生成相关文档，始终保持
-          同步。"
-      - "sectionName": "BenefitCardZeroConfig"
-        "sectionSummary": "吸引追求快速、简便上手的用户。"
-        "iconName": "mdi:rocket-launch-outline"
-        "cardTitle": "零配置"
-        "cardDescription": "几秒即可上手。DocSmith 开箱即用，提供智能默认设置，
-          并自动检测你项目的技术栈。"
-      - "sectionName": "BenefitCardSeamlessIntegration"
-        "sectionSummary": "突出与 LLM 及发布平台的便捷集成。"
-        "iconName": "mdi:link-variant"
-        "cardTitle": "无缝集成"
-        "cardDescription": "连接你常用的 LLM，或使用 AIGNE Hub。一键发布，
-          立即与团队共享。"
-  - "sectionName": "FeatureShowcase"
-    "sectionSummary": "通过视觉吸引力强的分栏布局深入展示具体功能，
-      将描述性文本与 AIGNE 生态的清晰可视化
-      相结合。"
-    "splitHeroTitle": "AIGNE 生态的核心组成部分"
-    "splitHeroDescription": "DocSmith 不只是独立工具；它与 AIGNE 平台无缝
-      集成。因此，它能够利用强大的共享 AI 能力和
-      基础设施，让你无需自备 API 密钥即可使用
-      Gemini、GPT、Claude 等多种 LLM。"
-    "splitHeroActions":
-      - "text": "查看工作原理"
-        "link": "link:///documentation/how-it-works"
-      - "text": ""
-        "link": ""
-    "splitHeroRightImage": "https://docsmith.aigne.io/image-bin/uploads/def424c20bb\
-      db3c77483894fe0e22819.png"
-  - "sectionName": "HowItWorksTeaser"
-    "sectionSummary": "用于激发对 DocSmith 底层技术的兴趣，并引导用户前往
-      “工作原理”页面进行更深入的了解的
-      预告部分。"
-    "featureSectionTitle": "想知道这一切如何实现？"
-    "featureSectionDescription": "深入了解 AIGNE DocSmith 的架构。
-      探索智能分析你代码的多代理系统，并查看
-      完整的生成流水线如何运作。这就是其
-      背后的技术基础。"
-    "featureSectionAction":
-      "text": "深入了解工作原理"
-      "link": "link:///how-it-works"
-    "featureSectionBottomImage": "https://placehold.co/1440x520?text=DocSmith+Architecture"
-  - "sectionName": "FrequentlyAskedQuestions"
-    "sectionSummary": "本常见问题部分主动解答用户常见疑问，有助于消除
-      潜在顾虑，降低新用户开始使用时的
-      阻力。"
-    "faqTitle": "有问题？我们有答案。"
-    "faqList":
-      - "question": "AIGNE DocSmith 简而言之是什么？"
-        "answer": "这是一款智能的、由 AI 驱动的工具，通过分析你的代码库
-          自动生成高质量、结构化的多语言文档。把它看作
-          一位资深技术写作者，但速度要快得
-          多。"
-      - "question": "开始使用需要自备 API 密钥吗？"
-        "answer": "不需要。DocSmith 默认使用 AIGNE Hub，因此你无需任何
-          API 密钥即可立刻开始生成文档。若你愿意，也可以
-          连接你自己的 OpenAI、Google、Anthropic 等提供商的密钥。"
-      - "question": "它如何保持文档始终最新？"
-        "answer": "DocSmith 会智能检测你代码中的更改。当你运行
-          更新命令时，它会识别新增或修改的内容，并
-          仅自动重新生成受影响的部分，确保文档始终同步。"
-      - "question": "它支持哪些类型的项目？"
-        "answer": "它被设计为通用型。DocSmith 会自动检测你项目的
-          结构和技术栈，适用于 API、库、Web 应用等，且
-          可为不同受众自定义风格。"
-      - "question": "发布文档有多容易？"
-        "answer": "非常简单。只需一条 'aigne doc publish' 命令就能让
-          文档上线。你可以发布到公共的 DocSmith 平台，或
-          发布到你团队的私有实例。"
-  - "sectionName": "FinalCallToAction"
-    "sectionSummary": "页尾的高影响力最终号召性部分，通过提供清晰、
-      明确的下一步操作，将有兴趣的访客转化为
-      活跃用户。"
-    "ctaTitle": "准备好革新你的文档了吗？"
-    "ctaDescription": "别再把时间浪费在手工编写文档上。让 AI 处理繁重
-      工作，你可以专注于构建产品。立即试用 AIGNE DocSmith，
-      亲自体验其效果。"
-    "cta":
-      - "text": "免费开始使用"
-        "link": "link:///getting-started"
-      - "text": "在 GitHub 上查看"
-        "link": "https://github.com/AIGNE-io/aigne-doc-smith"
+meta:
+  title: "AIGNE DocSmith | AI 驱动的文档生成"
+  description: "生成能理解您代码的、全面的、多语言的文档。AIGNE DocSmith 使用 AI 保持您的文档同步，无需配置，无缝集成。"
+  image: "mediakit://heroAigneDocsmith.png"
+sections:
+  - sectionName: "hero"
+    sectionSummary: "Hero 部分通过强有力的价值主张、生动的视觉效果和明确的行动号召来吸引注意力，鼓励用户立即参与和探索。"
+    splitHeroTitle: "真正理解您代码的 AI 驱动文档"
+    splitHeroDescription: "告别手动编写文档。AIGNE DocSmith 会分析您的代码库，生成全面、结构化、多语言的文档，并始终保持同步。就像魔法一样！"
+    splitHeroActions:
+      - text: "立即开始"
+        link: "#quick-start"
+      - text: "在 GitHub 上查看"
+        link: "https://github.com/AIGNE-io/aigne-doc-smith"
+    splitHeroRightImage: "mediakit://heroAigneDocsmith.png"
+  - sectionName: "features"
+    sectionSummary: "本部分通过一个有趣的、可快速浏览的网格展示了 DocSmith 的核心优势。每个功能都配有清晰的图标和精炼的描述，以突出其'价值'而非仅仅是'功能'。"
+    threeColumnGridTitle: "爱上 DocSmith 的理由"
+    list:
+      - sectionName: "intelligentAnalysis"
+        sectionSummary: "突出智能代码分析能力。"
+        iconName: "mdi:brain-outline"
+        cardTitle: "智能分析"
+        cardDescription: "我们的 AI 不仅仅是阅读您的代码——它能理解其结构、模式和意图，从而创建出完全合理的文档。"
+      - sectionName: "comprehensiveCoverage"
+        sectionSummary: "展示该工具生成各种文档的能力。"
+        iconName: "mdi:book-open-page-variant-outline"
+        cardTitle: "全面覆盖"
+        cardDescription: "从 API 参考到完整的用户指南，您需要的一切应有尽有。一次性为您的整个项目生成文档！"
+      - sectionName: "globalReady"
+        sectionSummary: "强调多语言支持。"
+        iconName: "mdi:web"
+        cardTitle: "全球化就绪"
+        cardDescription: "即刻走向全球！支持 12 种语言和专业的、感知上下文的翻译，助您触达全球用户。"
+      - sectionName: "alwaysCurrent"
+        sectionSummary: "重点介绍自动更新功能。"
+        iconName: "mdi:sync-circle"
+        cardTitle: "始终最新"
+        cardDescription: "告别过时的文档。DocSmith 会检测您的代码变更并自动更新文档，确保内容始终准确。"
+      - sectionName: "zeroConfig"
+        sectionSummary: "突出易用性和开箱即用的功能。"
+        iconName: "mdi:rocket-launch-outline"
+        cardTitle: "零配置"
+        cardDescription: "开箱即用，具备智能默认设置和自动检测功能。您可以在几分钟内生成第一套文档！"
+      - sectionName: "seamlessIntegration"
+        sectionSummary: "描述该工具与其他平台和 LLM 的集成能力。"
+        iconName: "mdi:puzzle-outline"
+        cardTitle: "无缝集成"
+        cardDescription: "连接 AIGNE Hub，使用您自己的 LLM 密钥，一键发布。完美融入您的工作流。"
+  - sectionName: "quickStart"
+    sectionSummary: "本部分提供了一个极其简单、以行动为导向的指南，帮助用户立即上手。重点在于展示看到结果是多么快速和容易。"
+    verticalHeroTitle: "几分钟内快速上手"
+    verticalHeroDescription: "准备好见证魔法了吗？只需安装 CLI 并在您的项目目录中运行一个命令。就是这么简单！剩下的交给 DocSmith。"
+    verticalHeroCode:
+      name: "终端"
+      content: "# 全局安装 AIGNE CLI\nnpm install -g @aigne/cli\n\n# 进入您的项目并生成文档\naigne doc generate"
+  - sectionName: "howItWorks"
+    sectionSummary: "本部分为好奇和技术导向的用户揭示了其内部工作原理。它以视觉上引人入胜且易于理解的方式解释了多智能体架构。"
+    splitHeroTitle: "工作原理：AI 智能体的交响乐"
+    splitHeroDescription: "DocSmith 不只是一个 AI——它是一个由专业智能体组成的协作团队！基于 AIGNE 框架构建，我们的多智能体流水线分阶段进行分析、规划和内容生成，确保每次都能产出高质量、结构化的文档。就像您拥有一个专属的写作团队。"
+    splitHeroLeftImage: "mediakit://howItWorksPipeline.png"
+    splitHeroActions:
+      - text: ""
+        link: ""
+      - text: ""
+        link: ""
+  - sectionName: "cliReference"
+    sectionSummary: "一个面向开发者的实用参考，列出了最常见的 CLI 命令。以简洁的网格形式呈现，方便用户快速查找和复制所需命令。"
+    twoColumnGridTitle: "掌握命令行"
+    list:
+      - sectionName: "generateCommand"
+        sectionSummary: "解释 'generate' 命令。"
+        contentCardTitle: "生成文档"
+        contentCardDescription: "核心功能！运行此命令以启动从代码分析到内容创建的整个过程。"
+        contentCardRightCode:
+          name: "CLI"
+          content: "aigne doc generate"
+      - sectionName: "updateCommand"
+        sectionSummary: "解释 'update' 命令。"
+        contentCardTitle: "更新指定文档"
+        contentCardDescription: "需要调整某些内容？此命令允许您根据新的反馈重新生成特定文档。"
+        contentCardRightCode:
+          name: "CLI"
+          content: "aigne doc update"
+      - sectionName: "translateCommand"
+        sectionSummary: "解释 'translate' 命令。"
+        contentCardTitle: "翻译成新语言"
+        contentCardDescription: "扩大您的影响力。轻松将您生成的文档翻译成 12 种支持的语言中的任意一种。"
+        contentCardRightCode:
+          name: "CLI"
+          content: "aigne doc translate"
+      - sectionName: "publishCommand"
+        sectionSummary: "解释 'publish' 命令。"
+        contentCardTitle: "发布与分享"
+        contentCardDescription: "准备好上线了吗？使用一个命令发布您的文档，并立即获得一个可分享的链接。"
+        contentCardRightCode:
+          name: "CLI"
+          content: "aigne doc publish"
+  - sectionName: "enterprise"
+    sectionSummary: "本部分直接面向业务需求，重点介绍了为团队和企业提供的强大功能。它旨在建立信任，并为有价值的咨询提供明确的下一步。"
+    splitHeroTitle: "专为团队和企业打造"
+    splitHeroDescription: "通过专为专业团队设计的功能，将您的文档提升到新水平。获得团队协作、自定义品牌、API 集成和优先支持。可部署在您自己的基础设施上，以实现最大程度的安全和控制。"
+    splitHeroActions:
+      - text: "联系销售"
+        link: "https://www.aigne.io/contact"
+      - text: ""
+        link: ""
+    splitHeroRightImage: "mediakit://enterpriseFeatures.png"
+  - sectionName: "communityCta"
+    sectionSummary: "最后，友好地邀请用户加入对话，成为 AIGNE 社区的一员。本部分旨在促进联系，并为支持和更新提供资源。"
+    ctaTitle: "加入我们不断壮大的社区！"
+    ctaDescription: "有任何问题、想法，或者只是想打个招呼？快来与我们以及其他开发者建立联系。获取最新动态，分享您的项目，并从社区获得支持。"
+    cta:
+      - text: "在 Twitter 上关注"
+        link: "https://twitter.com/arcblock_io"
+      - text: "加入讨论"
+        link: "https://community.arcblock.io/discussions/boards/aigne"
